--- a/imports/ui/components/splash_main/web.html
+++ b/imports/ui/components/splash_main/web.html
@@ -1,3 +1,20 @@
-<navigation></navigation>
 
-<div ui-view=""></div>
+<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
+
+<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
+
+<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
+
+<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
+
+<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
+
+
+<div style="color:red;height:30px;background-color:purple;padding:50px;margin:50px"> this is a div </div>
+
+<div style="color:red;height:30px;background-color:purple;padding:50px;margin:50px"> this is a div </div>
+
+<div style="color:red;height:30px;background-color:purple;padding:50px;margin:50px"> this is a div </div>
+
+<div style="color:red;height:30px;background-color:purple;padding:50px;margin:50px"> this is a div </div>
+
