Feat: Added Splash
can now visit splash page!

--- a/client/main.less
+++ b/client/main.less
@@ -4,3 +4,4 @@ body {
 
 @import "../imports/ui/components/party_main/party_main.less";
 @import "../imports/ui/components/event_main/event_main.less";
+@import "../imports/ui/components/splash_main/splash_main.less";
