--- a/imports/ui/components/splash_main/web.html
+++ b/imports/ui/components/splash_main/web.html
@@ -1,20 +1,1 @@
-
-<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
-
-<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
-
-<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
-
-<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
-
-<div style="color:blue;height:30px;background-color:orange;padding:50px;margin:50px"> this is a div </div>
-
-
-<div style="color:red;height:30px;background-color:purple;padding:50px;margin:50px"> this is a div </div>
-
-<div style="color:red;height:30px;background-color:purple;padding:50px;margin:50px"> this is a div </div>
-
-<div style="color:red;height:30px;background-color:purple;padding:50px;margin:50px"> this is a div </div>
-
-<div style="color:red;height:30px;background-color:purple;padding:50px;margin:50px"> this is a div </div>
-
+<div ui-view=""></div>
