Feat: Profiles and profile views
Added permissions, auth levels, and profiles

--- a/client/main.less
+++ b/client/main.less
@@ -5,3 +5,4 @@ body {
 @import "../imports/ui/components/inventory_main/inventory_main.less";
 @import "../imports/ui/components/event_main/event_main.less";
 @import "../imports/ui/components/splash_main/splash_main.less";
+@import "../imports/ui/components/dossier_main/dossier_main.less";
