Feat: Signup/Volunteer/Cancel events
Users can signup for event when logged in or not, volunteers can sign
up if logged in, and anyone can cancel

--- a/imports/ui/components/navigation/navigation.html
+++ b/imports/ui/components/navigation/navigation.html
@@ -1,10 +1,15 @@
 <md-toolbar>
   <div class="md-toolbar-tools">
     <h2>
-      <span ui-sref="events">
+      <span ui-sref="splash">
         Heroes On The Water
       </span>
     </h2>
+    <md-button href='http://localhost:3000/events'> Events </md-button>
+    <md-button href='http://localhost:3000/eventsdb'> Events DB</md-button>
+    <md-button href='http://localhost:3000/dossiers'> Dossiers </md-button>
+    <md-button href='http://localhost:3000/profile'> Profile </md-button>
+    <md-button href='http://localhost:3000/inventories'> Inventory </md-button>
     <span flex></span>
     <auth></auth>
   </div>
