--- a/imports/ui/event_components/eventRsvpsList/eventRsvpsList.less
+++ b/imports/ui/event_components/eventRsvpsList/eventRsvpsList.less
@@ -1,22 +1,22 @@
-.rsvp-sum {
-  width: 160px;
+.rsvp-sum-e {
+  width: 190px;
   @media (min-width: 400px) {
     float: right;
   }
   @media (max-width: 400px) {
     margin: 0 auto;
   }
-  > .rsvp-amount {
+  > .rsvp-amount-e {
     display: inline-block;
     text-align: center;
-    width: 50px;
+    width: 60px;
 
-    > .amount {
+    > .amount-e {
       font-weight: bold;
       font-size: 20px;
     }
-    > .rsvp-title {
-      font-size: 11px;
+    > .rsvp-title-e {
+      font-size: 10px;
       color: #aaa;
       text-transform: uppercase;
     }
