--- a/imports/ui/components/navigation/navigation.html
+++ b/imports/ui/components/navigation/navigation.html
@@ -8,7 +8,7 @@
     <md-button href='http://localhost:3000/events'> Events </md-button>
     <md-button href='http://localhost:3000/eventsdb'> Events DB</md-button>
     <md-button href='http://localhost:3000/dossiers'> Dossiers </md-button>
-    <md-button href='http://localhost:3000/profile'> Profile </md-button>
+    <md-button ui-sref="dossierDetails({ userId: Meteor.userId() })"> Profile </md-button>
     <md-button href='http://localhost:3000/inventories'> Inventory </md-button>
     <span flex></span>
     <auth></auth>
