Feat: Admin Tabs and Donations
Events db and dossiers are viewable through the admin tabs. They are
log-in protected. Donations tab added

--- a/imports/ui/components/navigation/navigation.html
+++ b/imports/ui/components/navigation/navigation.html
@@ -6,8 +6,7 @@
       </span>
     </h2>
     <md-button href='http://localhost:3000/events'> Events </md-button>
-    <md-button href='http://localhost:3000/eventsdb'> Events DB</md-button>
-    <md-button href='http://localhost:3000/dossiers'> Dossiers </md-button>
+    <md-button href='http://localhost:3000/splash/admin'> Admin </md-button>
     <md-button ui-sref="dossierDetails({ userId: Meteor.userId() })"> Profile </md-button>
     <md-button href='http://localhost:3000/inventories'> Inventory </md-button>
     <span flex></span>
