Fix: Import .less file
Imported .less file so that css would work properly

--- a/imports/ui/components/event_main/event_main.less
+++ b/imports/ui/components/event_main/event_main.less
@@ -4,3 +4,4 @@ eventMain {
 
 @import "../../event_components/eventsList/eventsList.less";
 @import "../../event_components/eventDetails/eventDetails.less";
+@import "../../event_components/eventsDb/eventsDb.less";
