--- a/imports/ui/dossier_components/dossiersList/dossiersList.less
+++ b/imports/ui/dossier_components/dossiersList/dossiersList.less
@@ -9,7 +9,7 @@ dossiers-list {
 
 
 .datagrid table { border-collapse: collapse; text-align: left; width: 100%; }
-.datagrid {font: normal 12px/150% Arial, Helvetica, sans-serif; background: #fff; overflow: hidden; border: 1px solid #8C8C8C; }
+.datagrid {font: normal 12px/150% Arial, Helvetica, sans-serif; background: #fff; overflow: auto; border: 1px solid #8C8C8C; }
 .datagrid table td,
 .datagrid table th { padding: 3px 2px; }
 .datagrid table thead th {background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8C8C8C), color-stop(1, #7D7D7D) );background:-moz-linear-gradient( center top, #8C8C8C 5%, #7D7D7D 100% );filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#8C8C8C', endColorstr='#7D7D7D');background-color:#8C8C8C; color:#080808; font-size: 14px; font-weight: bold; border-left: 0px solid #A3A3A3; }         
