--- a/imports/ui/components/navigation/navigation.html
+++ b/imports/ui/components/navigation/navigation.html
@@ -6,9 +6,11 @@
       </span>
     </h2>
     <md-button href='http://localhost:3000/events'> Events </md-button>
+    <md-button href='http://localhost:3000/eventsdb'> Events DB</md-button>
     <md-button href='http://localhost:3000/splash/admin'> Admin </md-button>
     <md-button ui-sref="dossierDetails({ userId: Meteor.userId() })"> Profile </md-button>
     <md-button href='http://localhost:3000/inventories'> Inventory </md-button>
+    <md-button href='http://localhost:3000/inventoriesdb'> Inventories DB</md-button>
     <span flex></span>
     <auth></auth>
   </div>
