--- a/imports/ui/components/navigation/navigation.html
+++ b/imports/ui/components/navigation/navigation.html
@@ -1,16 +1,14 @@
-<md-toolbar>
-  <div class="md-toolbar-tools">
+<md-toolbar style="height:110px;z-index:10000">
+  <div class="md-toolbar-tools" style="margin-top:15px">
     <h2>
       <span ui-sref="splash">
-        Heroes On The Water
+        <img src="img/howlogo.png">
       </span>
     </h2>
     <md-button href='http://localhost:3000/events'> Events </md-button>
-    <md-button href='http://localhost:3000/eventsdb'> Events DB</md-button>
-    <md-button href='http://localhost:3000/splash/admin'> Admin </md-button>
-    <md-button ui-sref="dossierDetails({ userId: Meteor.userId() })"> Profile </md-button>
-    <md-button href='http://localhost:3000/inventories'> Inventory </md-button>
-    <md-button href='http://localhost:3000/inventoriesdb'> Inventories DB</md-button>
+    <md-button ng-show="navigation.isAuthorized()" href='http://localhost:3000/splash/admin'> Admin </md-button>
+    <md-button ng-show="navigation.isLoggedIn()" ui-sref="dossierDetails({ userId: Meteor.userId() })"> Profile </md-button>
+    <md-button href='http://localhost:3000/splash#donation-section'> Donate </md-button>
     <span flex></span>
     <auth></auth>
   </div>
