Fix: Inventories buttons
Fixed modify and delete

--- a/imports/ui/components/inventory_main/inventory_main.less
+++ b/imports/ui/components/inventory_main/inventory_main.less
@@ -4,3 +4,4 @@ inventory_main {
 
 @import "../../inventory_components/inventoriesList/inventoriesList.less";
 @import "../../inventory_components/inventoryDetails/inventoryDetails.less";
+@import "../../inventory_components/inventoriesDb/inventoriesDb.less";
